--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   },
   "devDependencies": {
     "@smui/button": "^7.0.0-beta.18",
+    "@smui/drawer": "^7.0.0-beta.18",
+    "@smui/list": "^7.0.0-beta.18",
     "@sveltejs/adapter-auto": "^3.0.0",
     "@sveltejs/kit": "^2.0.0",
     "@sveltejs/vite-plugin-svelte": "^3.0.0",
@@ -26,6 +28,5 @@
     "typescript": "^5.0.0",
     "vite": "^5.0.3"
   },
-  "type": "module",
-  "dependencies": {}
+  "type": "module"
 }
