--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@smui/button": "^7.0.0-beta.18",
     "@smui/drawer": "^7.0.0-beta.18",
     "@smui/list": "^7.0.0-beta.18",
+    "@smui/textfield": "^7.0.0-beta.18",
     "@sveltejs/adapter-auto": "^3.0.0",
     "@sveltejs/kit": "^2.0.0",
     "@sveltejs/vite-plugin-svelte": "^3.0.0",
