--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "smui-theme": "smui-theme compile static/smui.css -i src/theme"
   },
   "devDependencies": {
+    "@smui-extra/accordion": "^7.0.0",
     "@smui/button": "^7.0.0-beta.18",
     "@smui/drawer": "^7.0.0-beta.18",
     "@smui/list": "^7.0.0-beta.18",
